--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Cal Arias: My Portfolio</h1>
+    <h1>Cal Arias: My portfolio</h1>
 
     <nav>
       <p>
